electron-dock/mx-test-framework/deploy/k8s/internal/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mx-test-framework
  labels:
    app.kubernetes.io/part-of: mx-test-framework
